[tool.poetry]
name = "dev-env"
version = "0.1.0"
description = "Development Environment Configuration"
authors = ["Jesse Rusak <rusak.jesse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
# molecule-vagrant = "^0.6.3"
# python-vagrant = "^0.5.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
