[tool.poetry]
name = "dev-env"
version = "0.1.0"
description = "Development Environment Configuration"
authors = ["Jesse Rusak <rusak.jesse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
requests-cache = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
pyflakes = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
